--- a/auction-annuity/css/main.scss
+++ b/auction-annuity/css/main.scss
@@ -97,8 +97,9 @@ textarea {
    ========================================================================== */
 
 $brand-colour-1: #002849;
-$stages-colour-1: #eee;
-$stages-colour-2: #f9f9f9;
+$brand-colour-2: #0dd1ff;
+$stages-colour-1: #deecf7;
+$stages-colour-2: #c0d7ea;
 
 .mobile-only {
 	display: none;
@@ -106,6 +107,18 @@ $stages-colour-2: #f9f9f9;
 	
 h1, h2, h3 {
 	font-family: 'Roboto Slab', serif;
+}
+
+h2 {
+	font-size: 125%;	
+}
+
+p {
+	margin: 20px 0;
+}
+
+a {
+	color: $brand-colour-2;
 }
 
 .align-left {
@@ -116,65 +129,118 @@ header, section, footer {
 	width: 100%;
 	float: left;
 	text-align: center;
+}
+
+.logo {
+	width: 10em;
+}
 	
-	.logo {
-		width: 10em;
+.section-padding {
+	padding: 20px;
+	max-width: 1000px;
+	margin: 0 auto;
+}
+	
+.padding {
+	padding: 20px;
+}
+	
+.side-padding {
+	padding: 0 20px;
+}
+
+.col-1 {
+	width: 100%;
+	text-align: left;
+}
+	
+.col-1.stages {
+	text-align: center;
+}
+	
+.col-3 {
+	width: 33.3%;
+	margin: 0 auto;
+	display: inline-block;
+	float: left;
+		
+	h2 {
+		text-align: left;
+	}
+	
+	img {
+		width: 65%;
+		max-width: 200px;
+	}
+}
+		
+.col-2 {
+	width: 50%;
+	margin: 0 auto;
+	display: inline-block;
+	float: left;
+	text-align: left;
+}
+
+#intro {
+	text-align: center;
+	background: #b2f1ff url('../img/hero.jpg') no-repeat;
+	background-position: 33.3%;
+	background-size: cover;
+	margin: 15px 0 0;
+	
+	.side-padding {
+		position: relative;
+	}
+	
+	.copy {
+		padding: 20px 0;
+		width: 50%;
+	}
+	
+	h1 {
+		font-size: 175%;
+	}
+	
+	img {
+		width: 100%;
+
 	}
 	
 	.section-padding {
-		padding: 20px;
-		max-width: 1000px;
-		margin: 0 auto;
-	}
-	
-	.padding {
-		padding: 20px;
-	}
-	
-	.side-padding {
 		padding: 0 20px;
-	}
-
-	
-	.col-1 {
-		width: 100%;
-		text-align: left;
-	}
-	
-	.col-1.stages {
-		text-align: center;
-	}
-	
-	.col-3 {
-		width: 33.3%;
-		margin: 0 auto;
-		display: inline-block;
-		float: left;
-		text-align: left;
 	}
 	
 	.col-2 {
-		width: 50%;
-		margin: 0 auto;
-		display: inline-block;
-		float: left;
-		text-align: left;
+		
+		
+		
 	}
 	
-	.footer-contact-col p {
-		margin-top: 0;
+	.intro-shape-left {
+		border-right: 30px solid transparent;
+		border-bottom: 30px solid white;
+
 	}
 	
-	.copyright .col-1 {
-		text-align: center;
+	.intro-shape-right {
+		border-left: 30px solid transparent;
+		border-bottom: 30px solid white;
+
 	}
 }
-
+	
+#form {
+	background: $stages-colour-1;
+	padding: 10px 0 50px;
+	margin-top: 100px;
+}
+	
 label {
 	display: block;
 	margin: 1em 0 0.5em;
 }
-
+	
 input {
 	border: 1px solid $brand-colour-1;
 	height: 1.5em;
@@ -183,16 +249,15 @@ input {
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 }
-
+	
 input#age {
 	width: 6em;
 }
-
-
+	
 #income-to-sell {
 	display: inline-block;
 }   
-    
+	    
 #income-to-sell input {
 	border: 0;
 	display: inline-block;
@@ -208,7 +273,7 @@ input#age {
 	-moz-border-radius: 0;
 	-webkit-border-radius: 0;
 }
-
+	
 #currency, #per-year {
 	display: inline-block;
 	float: left;
@@ -216,21 +281,21 @@ input#age {
 	line-height: 1.5em;
 	padding: 3px 6px;
 }
-
+	
 #currency {
 	border-radius: 4px 0px 0px 4px;
 	-moz-border-radius: 4px 0px 0px 4px;
 	-webkit-border-radius: 4px 0px 0px 4px;
 	border: 1px solid $brand-colour-1;
 }
-
+	
 #per-year {
 	border-radius: 0px 4px 4px 0px;
 	-moz-border-radius: 0px 4px 4px 0px;
 	-webkit-border-radius: 0px 4px 4px 0px;
 	border: 1px solid $brand-colour-1;
 }
-
+	
 .button {
 	margin: 2em 0 0.5em;
 	height: 2.5em;
@@ -238,47 +303,52 @@ input#age {
 	padding: 0;
 	border: 0;
 	color: white;
-	background: #00437b;
-	-webkit-transition: all .4s linear;
-	-moz-transition: all .4s linear;
-	-o-transition: all .4s linear;
-	transition: all .4s linear;
+	background: $brand-colour-1;
+	-webkit-transition: all .3s linear;
+	-moz-transition: all .3s linear;
+	-o-transition: all .3s linear;
+	transition: all .3s linear;
 	cursor: pointer;
 	border-radius: 4px;
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	text-align: center;
 }
-
+	
 .button:hover {
-	color: white;
-	background: $brand-colour-1;
+	color: $brand-colour-2;
+	background: #005396;
 }
-
+	
 .register-scroll {
 	float: right;
 	margin-top: 15px;
 	width: 20em;
 }
-
+	
+.stages-header {
+	margin: 100px 0 40px;
+}
+	
 ol {
 	counter-reset:li; /* Initiate a counter */
 	margin-left:0; /* Remove the default left margin */
 	padding-left:0; /* Remove the default left padding */
 }
+
 ol > li {
 	position:relative; /* Create a positioning context */
 	list-style:none; /* Disable the normal item numbering */
 	max-width: 75%;
-    margin: 4px auto;
-    background: $stages-colour-1;
+	margin: 4px auto;
+	background: $stages-colour-1;
 	padding-top: 40px;
 }
-
+	
 ol > li.second-bg {
 	background: $stages-colour-2;
 }
- 
+	 
 ol > li:before {
 	content:counter(li); /* Use the counter as content */
 	counter-increment:li; /* Increment the counter by 1 */
@@ -289,12 +359,13 @@ ol > li:before {
 	margin-top: 20px;
 	font-family: 'Roboto Slab', serif;
 	z-index: 1;
-    position: relative;
+	position: relative;
 }
+
 li ol,
 li ul {}
 ol ol li:last-child {}
-
+	
 .circle {
 	-webkit-border-radius: 50%;
 	-moz-border-radius: 50%;
@@ -304,43 +375,66 @@ ol ol li:last-child {}
 	background: $brand-colour-1;
 	position: absolute;
 	top: 40px;
-    left: 50%;
-    margin-left: -25px;
+	left: 50%;
+	margin-left: -25px;
 }
-
+	
 ol > li h3 {
 	margin-top: 0;
 }
-
+	
 .arrow-down {
 	border: 4px solid white;
 	width: 50px;
 	height: 50px;
 	background: $stages-colour-1;
 	-ms-transform: rotate(45deg); /* IE 9 */
-    -webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
-    transform: rotate(45deg);
-    position: absolute;
-    top: -49px;
+	-webkit-transform: rotate(45deg); /* Chrome, Safari, Opera */
+	transform: rotate(45deg);
+	position: absolute;
+	top: -49px;
 }
-
+	
 .arrow-down.colour-2 {
 	background: $stages-colour-2;
 }
-
+	
 .arrow-down-mask {
 	height: 20px;
 	overflow: hidden;
 	position: absolute;
-    bottom: -20px;
-    left: 50%;
-    width: 58px;
+	bottom: -20px;
+	left: 50%;
+	width: 58px;
 	margin-left: -29px;
 	z-index: 1;
 }
 
 footer {
 	font-size: small;
+	border-top: 4px solid $stages-colour-2;
+	margin-top: 20px;
+	
+	.col-2 {
+		padding-bottom: 15px;
+	}
+	
+	p {
+		margin: 10px 0;
+	}
+}
+
+.footer-2 {
+	background: $brand-colour-1;
+	color: white;
+}
+
+.footer-contact-col p {
+	margin-top: 0;
+}
+	
+.copyright .col-1 {
+	text-align: center;
 }
 
 #back-to-top {
@@ -349,7 +443,7 @@ footer {
 }
 
 i {
-    border: solid $brand-colour-1;
+    border: solid white;
     border-width: 0 2px 2px 0;
     display: inline-block;
     padding: 2px;
@@ -377,60 +471,80 @@ i {
 	.register-scroll {
 	    width: 15em;
 	}
+	
+	#intro {
+	    background-position: 50%;
+	}
 
 }
 
 @media (max-width:600px)  { /* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
 
-	header, section, footer {
+	
 		
-		.mobile-only {
-			display: block;
-		}
+	.mobile-only {
+		display: block;
+	}
 		
-		.desktop-only {
-			display: none;
-		}
+	.desktop-only {
+		display: none;
+	}
 
-.side-padding {
-			padding: 0;
-		}
-		.col-3 {
-			width: 100%;
-		}
+	.side-padding {
+		padding: 0;
+	}
+		
+	.intro-shape-left, .intro-shape-right {
+		display: none;
+	}
+		
+	#intro .copy {
+		width: 100%;
+	}
+	
+	#intro {
+	    background-position: 32%;
+	    padding-bottom: 40px;
+	}
+
+	.col-3 {
+		width: 100%;
+	}
 			
-		.col-2 {
-			width: 100%;
-		}
-		.copyright .col-1 {
-		    text-align: left;
-		}
-		.copyright #back-to-top {
-		    width: 100%;
-		    margin: 20px 0 40px;  
-		}
+	.col-2 {
+		width: 100%;
+	}
+	
+	.copyright .col-1 {
+		text-align: left;
+	}
+	
+	.copyright #back-to-top {
+		width: 100%;
+		margin: 20px 0 40px;  
+	}
 		
-		input {
-			width: 100%;
-    	}
+	input {
+		width: 100%;
+    }
     	
-    	.register-scroll {
-			float: left;
-			width: 100%;
-		}
+    .register-scroll {
+		float: left;
+		width: 100%;
+	}
 		
-		ol > li {
-		    max-width: 100%;
-		    margin: 4px 0;
-		}
-	}	
+	ol > li {
+		max-width: 100%;
+		margin: 4px 0;
+	}
+		
 }
 
-@media (min-width:600px) and (max-width:1025px) { /* big landscape tablets, laptops, and desktops */
+@media (min-width:600px) and (max-width:1000px) { /* big landscape tablets, laptops, and desktops */
 
 	header, section, footer {
 		.col-3 {
-			width: 100%;
+			width: 50%;
 		}
 		
 		.footer-contact-col {
