--- a/auction-annuity/css/main.scss
+++ b/auction-annuity/css/main.scss
@@ -506,6 +506,10 @@ i {
 	    background-position: 32%;
 	    padding-bottom: 40px;
 	}
+	
+	h1 {
+    	font-size: 150%;
+	}
 
 	.col-3 {
 		width: 100%;
