--- a/wc-dev/css/main.css
+++ b/wc-dev/css/main.css
@@ -448,7 +448,7 @@ footer .copyright {
   }
   /* line 456, main.scss */
   header .sub-menu-button-clicked {
-    color: #a7507c;
+    color: white;
   }
   /* line 460, main.scss */
   header .social-icons {
