--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -480,10 +480,10 @@ footer {
 		}
 	
 		.menu-button:hover {
-			color: $brand-col-turquoise;
+			color: $white;
 			
 			svg {
-				fill: $brand-col-turquoise;
+				fill: $white;
 			}
 		}	
 		
