--- a/wc-dev/css/main.scss
+++ b/wc-dev/css/main.scss
@@ -346,6 +346,10 @@ footer {
 		font-size: 78%;
 	}
 	
+	svg {
+		margin-top: 0;
+	}
+	
 }
 
 
@@ -504,6 +508,8 @@ footer {
 		.copyright {
 			margin-top: 40px;
 		}
+		
+		
 
 
 	}
